--- a/_data/2020/montreal/participants.yml
+++ b/_data/2020/montreal/participants.yml
@@ -50,9 +50,9 @@
   image: /2020/montreal/images/robert-wp.jpg
   bio: "Robert Vidigal is a Ph.D Candidate at the Department of Political Science, Stony Brook University, NY. His research focuses on Comparative Political Behavior, Political Communication, Political Psychology, Public Opinion, and Network Analysis. He is interested in how political communication influences voters behavior and political attitudes. Especially, citizens’ ability and motivations to learn and process new information."
 
-- name: Zedan Xu
+- name: Dan Xu
   image: 
-  bio: 
+  bio: "Dan Xu is a doctoral student in Information at the University of Toronto. His research focuses on misinformation propagation in homogeneous and heterogeneous social networks. He is particularly interested in how misinformation shapes people's political attitudes and behaviors, and hence contributes to political polarization and ideological segregation."
   
 - name: Baturay Yurtbay
   image: /2020/montreal/images/Baturay Yurtbay.jpg  
