--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -20,7 +20,7 @@ speakers:
       website: https://dennisfeehan.org/
     
     - name: Johannes C. Eichstaedt
-      image: /assets/images/johannes_eichstaedt.jpeg
+      image: /assets/images/johannes_eichstaedt.jpg
       bio: Johannes C. Eichstaedt is a computational social scientist. He is jointly appointed as the Ram and Vijay Shriram HAI Faculty Fellow, and an Assistant Professor (Research) in the Psychology Department. Johannes obtained his Ph.D. in Psychology and has been a Senior Research Associate at the Positive Psychology Center at the University of Pennsylvania. In 2011 he co-founded and led the World Well-Being Project, bringing together computer scientists and psychologists, which has since attracted $3.9m in funding. Before joining the social sciences, Johannes did research in particle physics with an M.S. from the University of Chicago. In 2014, he was elected an Emerging Leader in Science & Society by the American Association for Advancement of Science (AAAS). In his non-academic time he practices Tai Chi and goes on long-distance hikes.
       website: http://jeichstaedt.com/
       
