--- a/_data/2020/montreal/speakers.yml
+++ b/_data/2020/montreal/speakers.yml
@@ -1,15 +1,10 @@
-- name: Monica Alexander
-  image: /assets/images/Monica_Alexander.jpg
-  bio: "Monica Alexander is an Assistant Professor in Statistical Sciences and Sociology at the University of Toronto. Her research focuses on developing statistical methods to help measure demographic and health outcomes. She received a PhD in Demography and Masters in Statistics from the University of California, Berkeley. She has worked on research projects with organizations such as UNICEF, the World Health Organization, the Bill and Melinda Gates Foundation, and the Human Mortality Database."
-  website: https://www.monicaalexander.com/
-  
 - name: William L. Hamilton
   image: /assets/images/willhamilton1.jpg
   bio: "William L. Hamilton is an Assistant Professor of Computer Science at McGill University, a member of the Mila AI Institute of Quebec, and a Canada CIFAR Chair in AI. His research focuses on graph representation learning, as well as applications in computational social science and biology. William's doctoral thesis -Representation Learning Methods for Computational Social Science- received the 2018 Arthur L. Samuel Thesis Award for the best thesis in the Computer Science department at Stanford University. He also received the 2017 Cozzarelli Best Paper Award from PNAS for his work studying police-community interactions using machine learning. His work has been featured on the BBC, Wired, and in the New York Times."
   website: https://williamleif.github.io/
 
-- name: Richard Landers
-  image: /assets/images/landers.jpg
-  bio: "Richard N. Landers is an Associate Professor of Psychology at the University of Minnesota and holds the John P. Campbell Distinguished Professorship of Industrial-Organizational Psychology. His research concerns innovative technologies in psychometric assessment, employee selection, adult learning, and research methods, focusing recently on game-based assessment, gamification, artificial intelligence, and virtual reality. His work has been published in Journal of Applied Psychology, Computers in Human Behavior, and Psychological Methods, among others, and his work has been featured in popular outlets such as Forbes, Business Insider, and Popular Science. He is also a Fellow of the Society for Industrial and Organizational Psychology."
-  website: https://rlanders.net/
-- Name: More to come ... 
+- name: Stephane Helleringer
+#  image: 
+  bio: "Stephane Helleringer is a demographer with interests in a) the development of new methods to measure mortality rates in countries with limited data, and b) the impact of epidemics on population health and mortality. Over the past 15 years, he has worked extensively in several African and south Asian countries. He has launched the Likoma Network Study, a cohort that generates detailed "maps" of the sexual networks through which HIV spreads in a small island community of East Africa. He is currently the principal investigator of a multi-country study on adolescent and adult mortality in Malawi, Uganda, Guinea-Bissau and Bangladesh, funded by the NIH. He recently initiated a panel study of behaviors and mortality during the COVID19 pandemic in Malawi."
+  website: https://www.jhsph.edu/faculty/directory/profile/3136/st-phane-helleringer
+  
