--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -43,7 +43,7 @@
  
 - date: "SICSS-Istanbul First Week: Discussions and Tutorials"
   events:
-    - name: "**Discussion Sessions**<br/>[SICSS Learning materials](https://compsocialscience.github.io/summer-institute/curriculum) will be covered during the discussion sessions. Participants are expected to watch the relevant vidoes on the website before coming to the discussion session. Relevant links is provided on the schedule. The aim is to underline important points in the materials, to discuss participant's questions and to prepare participants for Tutorial sessions."
+    - name: "**Discussion Sessions**<br/>[SICSS Learning materials](https://compsocialscience.github.io/summer-institute/curriculum) will be covered during the discussion sessions. Participants will be expected to watch the relevant vidoes on the website before coming to the discussion session. Relevant links can be found on the schedule. The aim is to underline important points in the materials, to discuss participant's questions and to prepare participants for Tutorial sessions."
     - name: "**Tutorial Sessions**<br/> After the discussion sessions, our Lecturers will organize tutorial sessions in which Participants will gain hands-on experience on different methods and will have an opportunity to see how to design a research in computational social science."
 
 - date: 2020-06-15
@@ -114,7 +114,7 @@
 
 - date: "SICSS-Istanbul Second Week: Projects and Alumni Talks"
   events:
-    - name: "**Projects**<br/> This week is only devoted to work on  group projects or individual projects. Participants will be expected to report their progressions every morning and to present their results at the end of the week."
+    - name: "**Projects**<br/> This week will be only devoted to work on  group projects or individual projects. Participants will be expected to report their progressions every morning and to present their results at the end of the week."
     - name: "**Alumni Talks**<br/> During the alumni talks, Participants from last year will talk about their [ongoing projects](https://compsocialscience.github.io/summer-institute/2019/istanbul/projects) and will share their experiences during and after SICSS-Istanbul."
     - name: "**[SICSS Festival](https://compsocialscience.github.io/summer-institute/2020/festival)**<br/> Additonal to SICSS-Istanbul Alumni talks, SICSS-Duke will organize The SICSS Festival in which alumni from all SICSS locations are hosting events such as tutorials, panel discussions, or debates. The only requirement to participate SICSS-Festival is filling the registration form. Detailed information can be found in its website. SICSS-Istanbul participants can find transformed times in this schedule."
 
