add registration form for presentations

--- a/_data/2020/istanbul/schedule.yml
+++ b/_data/2020/istanbul/schedule.yml
@@ -155,7 +155,7 @@
 - date: 2020-06-26
   name: Present Group Projects
   events:
-    - name: "Presentations"
+    - name: "Presentations ([Registration](https://docs.google.com/forms/d/e/1FAIpQLSeyNvp-0neCFx2UIbkdVmgYuYQMcAokp8cWrnwkfWbQKGNm2Q/viewform?usp=pp_url))"
       time: "12:00 - 14:00"
     - name: "Conclusion"
       time: "14:00 - 14:30"
