--- a/_data/2020/rutgers/schedule.yml
+++ b/_data/2020/rutgers/schedule.yml
@@ -51,7 +51,7 @@
       time: "12:15 - 13:15"
     - name: "<b>Activity on Surveys in the Ditigal Age</b>"
       time: "13:30 - 15:45" 
-    - name: "<b>Guest Speaker</b> (Daniel Hopkins)"
+    - name: "<b>Polarization and Nationalization of America's State Parties: An Analysis of State Party Platforms, 1918-2017</b> (Daniel Hopkins (joint work with Eric Schickler)"
       time: "16:00 - 17:30"
 
 - date: 2020-06-19
@@ -71,10 +71,10 @@
   events:
     - name: "<b>Activity on Digital Experiments</b>"
       time: "10:00 - 11:45"
-    - name: "<b>Lunch and Guest Speaker</b> (Yanna Krupnikov)"
-      time: "12:00 - 14:00"
+    - name: "<b>Convenience Samples in Experimental Research</b> (Yanna Krupnikov)"
+      time: "12:00 - 13:30"
     - name: "<b>Finalize Groups for Research Projects</b>"
-      time: "14:30 - 16:00"
+      time: "14:00 - 16:00"
 
 - date: 2020-06-23
   name: "<b>Work on Group Projects</b>"
