--- a/_data/2020/maastricht/participants.yml
+++ b/_data/2020/maastricht/participants.yml
@@ -38,6 +38,10 @@
   image: /assets/images/maas-KirilsMakarovs.jpg
   bio: "Kirils Makarovs is a PhD Candidate at the Department of Sociology, University of Essex. His research lies in the field of public understanding of science, risk perception, and conspiratorial mentality. He is also broadly interested in survey data analysis, experimental methodology, and computational approaches to studying public opinion, beliefs, and attitudes."
 
+- name: "Jakub Drápal"
+  image: /assets/images/maas-Jakub.jpg
+  bio: "Jakub concludes his Ph.D. studies at Charles University in Prague. Alongside he works at the Czech Academy of Sciences (PI) and as an assistant to a constitutional judge. He focuses on sentencing in post-communist countries using quantitative methodologies. He has studied at the University of Cambridge and spend several months as a visiting researcher at the University of Leiden and Max Planck Institute in Freiburg."
+
 - name: "Maria José Schmidt-Kessen"
   image: /assets/images/maas-MariaJose.jpg
   bio: "Maria José Schmidt-Kessen is Assistant Professor in EU Commercial Law at Copenhagen Business School. She holds a PhD (2018) from the European University Institute in Florence in competition and intellectual property law. Her current research interests lie in the area of online platform regulation, data governance, smart contracts and the use of algorithms in trade, online gambling regulation, and legal design. Most of her work is theoretical and legal-doctrinal, but she is on a quest to better understand and apply quantitative methods in her legal research."
