Update speakers pictures

--- a/_data/2020/maastricht/speakers.yml
+++ b/_data/2020/maastricht/speakers.yml
@@ -24,6 +24,7 @@
   website: https://www.maastrichtuniversity.nl/gijs.vandijck
 
 - name: "Gunes Acar"
+  image: /assets/images/maas-Gunes.jpg
   bio: "Gunes is a FWO postdoctoral fellow at KU Leuven's COSIC research group. His research interests involve web tracking measurement, anonymous communications, and IoT privacy and security. Gunes obtained his PhD at KU Leuven in 2017, and was a postdoctoral researcher between 2017 and 2019 at Princeton University's Center for Information Technology Policy."
   website: https://scholar.google.com/citations?user=B6yKiPQAAAAJ&hl=en
 
