--- a/_data/2020/bay_area/people.yml
+++ b/_data/2020/bay_area/people.yml
@@ -59,8 +59,8 @@ organizers:
 
     - name: Nick Camp
       image: /assets/images/nick_camp.png
-      bio: Nick Camp is a postdoctoral researcher at Stanford University, where he received his PhD in social psychology in 2018. His research examines racial disparities in the everyday encounters between police officers and citizens, drawing on a range of methods, from computational studies of officer body-worn camera footage, experiments in community and lab settings, to analyses of traffic stop data. Starting Fall 2020, Nick will be an assistant professor of Organizational Studies at the University of Michigan.
-      website: https://ncamp.people.stanford.edu/
+      bio: Nick Camp is a postdoctoral researcher at Stanford University, where he received his PhD in social psychology in 2018. His research examines racial disparities in the everyday encounters between police officers and citizens, drawing on a range of methods, from computational studies of officer body-worn camera footage, experiments in community and lab settings, to analyses of traffic stop data. Starting Summer 2020, Nick will be an assistant professor of Organizational Studies at the University of Michigan.
+      website: https://sites.google.com/umich.edu/npcamp/
       
 teachingassistants:
   title: Teaching Assistants 
