--- a/_data/2020/duke/schedule.yml
+++ b/_data/2020/duke/schedule.yml
@@ -20,14 +20,13 @@
 - date: 2020-06-16
   name: Collecting Digital Trace Data
   events:
-    - name: "10:00 - 10:15 Logistics (*Zoom*)"
-    - name: "10:15 - 11:30 Small group discussions (*Zoom*)"
+    - name: "10:00 - 10:15 Logistics and Intro to Group Exercise (*Zoom*)"
+    - name: "10:15 - 11:30 Designing a Research Question with Digital Trace Data(*Zoom*)"
     - name: "11:30 - 12:00 Break"
     - name: "12:00 - 1:00 Small group lunches (optional) (*Zoom*)"
     - name: "1:00 - 1:15 Break"
-    - name: "1:15 - 1:30 Introduction to the group exercise (*Zoom*)"
-    - name: "1:30 - 3:00 Group excercise (*Zoom*)"
-    - name: "3:00 - 3:15 Whole group debrief about group excercise (*Zoom*)"
+    - name: "1:15 - 2:30 Collecting Digital Trace Data(*Zoom*)"
+    - name: "2:30 - 3:30 Discussing Strengths & Benefits plus Hybrid Designs (*Zoom*)"
     - name: "3:30 - 3:45 Debrief and logistics (*Zoom*)"
     - name: "4:00 - 5:30 Dan Ariely: Title TBA"
 
